Fixed flexslider script. Fixed wrap and resmenu style to handle resmenu bug. Removed accordion init in js

--- a/css/main.css
+++ b/css/main.css
@@ -149,14 +149,17 @@ html, body {
         height: 100%;
         width: 100%;
         position: relative;
+        -webkit-transition: -webkit-transform .2s linear;
+        -moz-transition: -moz-transform .2s linear;
+        -o-transition: -o-transform .2s linear;
+        transition: transform .2s linear;
+        z-index: 1000;
+        background-color: #fff;
         }
         #layout {
             min-height: 100%;
             height: auto;
-            -webkit-transition: -webkit-transform .2s linear;
-            -moz-transition: -moz-transform .2s linear;
-            -o-transition: -o-transform .2s linear;
-            transition: transform .2s linear;
+            overflow: hidden;
             }
      
 .block-item-small p.type11 {
@@ -354,6 +357,7 @@ html, body {
 ***/
     #content {
         padding: 15px 0 71px;
+        position: relative;
         }     
 
 /*
